[package]
name = "spice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = "0.4"
anyhow = "1.0.44"
syntect = { version = "4.6.0", default-features = false, features = ["default-fancy"] }
crossterm = "0.21.0"